php+nginx+symfony+go/docker/k8s/overlays/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-php-example
  labels:
    app.kubernetes.io/name: docker-php-example
    app.kubernetes.io/component: webserver
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: docker-php-example.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-php-example
          servicePort: http
